--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -68,11 +68,12 @@
   <!-- レビュー一覧を表示 -->
   <h4>レビュー一覧</h4>
   <div id="review-index">
-  <% if @reviews.present? %>
-    <%= render partial: "books/reviews", locals: { reviews: @reviews } %>
-  <% else %>
-    <h3 style="color:red">現在、投稿レビューはありません。<h3>
-  <% end %>
+    <% if @book_reviews.present? %>
+      <%= render partial: "books/reviews", locals: { reviews: @book_reviews } %>
+    <% else %>
+      <h3 style="color:red">現在、投稿レビューはありません。</h3>
+    <% end %>
+  </div>
 </div>
 
 
