--- a/app/views/recommended_books/_user.html.erb
+++ b/app/views/recommended_books/_user.html.erb
@@ -23,7 +23,7 @@
 	                        <% partner_id = recommended_book.recommended_user_id  %>
 							<% partner = User.find(partner_id)  %>
 	                        <%= link_to user_path(partner_id) do %>
-		                        <%= attachment_image_tag partner, :image, size: "100x100", format: "jpg", fallback:"/assets/no_image.jpg" %>
+		                        <%= attachment_image_tag partner, :image, size: "100x100", format: "jpg", fallback:"no_image.jpg" %>
 		                        <br><%= partner.nickname %>
 	                        <% end %>
 				        </td>
