--- a/app/views/home/top.html.slim
+++ b/app/views/home/top.html.slim
@@ -23,9 +23,9 @@
       p
         | 2.会員登録する事でマイページを持つ事が出来、書籍に対するレビューが可能です。
       p
-        | 3.また、自分が読んだ書籍を他のユザーに対してオススメする事も出来ます。
+        | 3.また、自分が読んだ書籍を他のユーザーに対してオススメする事も出来ます。
       p
-        | 4.同時にマイページを充実させる事により、他のユザーからあなたに合った書籍をオススメされる場合もあります。
+        | 4.同時にマイページを充実させる事により、他のユーザーからあなたに合った書籍をオススメされる場合もあります。
     .row.search
       h3
         | さっそく検索する
