--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -31,7 +31,7 @@ html
                   li
                     = link_to "マイページ", user_path(current_user.id)
                   li
-                    = link_to 'ユザー一覧', users_path
+                    = link_to 'ユーザー一覧', users_path
                   li
                     = link_to '書籍検索', books_path
                   li
