Rspec systemspec First

--- a/app/views/books/_reviews.html.slim
+++ b/app/views/books/_reviews.html.slim
@@ -27,5 +27,6 @@
             = review.created_at.strftime('%Y/%m/%d %H:%M')
           td
             - if current_user == review.user
-              = link_to '削除する',  review_path(review), method: :delete, remote: true, class: "btn btn-sm btn-danger", style: "color:white;"
+              = link_to '削除する',  review_path(review), method: :delete, remote: true,id: "review_delete_submit",
+              class: "btn btn-sm btn-danger", style: "color:white;"
     = paginate reviews, class: "paginate"
