--- a/app/views/books/_new_review.html.slim
+++ b/app/views/books/_new_review.html.slim
@@ -20,7 +20,8 @@
     em
       | 　10文字以上、600文字以内でお願いします。
     = f.text_area :text, size: "10x5"
-  - book_details.each do |book_detail|
-    = f.hidden_field :book_id, :value => book_detail.isbn
+  .form-group
+    - book_details.each do |book_detail|
+      = f.hidden_field :book_id, :value => book_detail.isbn, class: "revew-test"
   .action
-    = f.submit "レビューを送信"
+    = f.submit "レビューを送信",id: "review_submit"
