--- a/app/views/recommended_books/confirm.html.slim
+++ b/app/views/recommended_books/confirm.html.slim
@@ -7,7 +7,7 @@ h4
         = @recommended_user.nickname
         | さんへ
       = form.radio_button :recommended, :shilf,  class:"radio_button col-lg-1 col-xs-2"
-      |  　
+      | 
       = form.label :recommended, "本棚書籍からオススメ", {value: :title, style: "display: inline-block;", class:"radio_button_text col-lg-2 col-xs-9"}
       = form.radio_button :recommended, :review,  class:"radio_button col-lg-1 col-xs-2"
       |  　
@@ -28,17 +28,10 @@ h4
     p
       | ラジオボタンにて、「書籍タイトル」か「著者名」のどちらかにチェックを入れ、フォーム空欄に検索したいワードを打ち込み、検索ボタンを押しましょう。
     = form_with url: confirm_recommended_book_path(@recommended_user), method: :get, local: true do |form|
-      = form.radio_button :search_condition, :title,  class:"radio_button"
-      |  　
-      = form.label :search_condition, "書籍タイトル", {value: :title, style: "display: inline-block;", class:"radio_button_text"}
-      = form.radio_button :search_condition, :author,  class:"radio_button"
-      |  　
-      = form.label :search_condition, "著者名", {value: :author, style: "display: inline-block;", class:"radio_button_text"}
-      |  　　
       = form.hidden_field :recommended, :value => "search"
-      = form.text_field :keyword, class: "form-control"
-      div[style="padding:10px"]
-        = form.submit '検索', class: "btn btn-lg btn-success "
+      = render partial: "shared/books_serch_box", locals: { form: form }
+
+    / 検索結果があれば書籍検索結果のviewへrender
     - if @books.present?
       = render partial: "recommended_books/search", locals: { recommended_user: @recommended_user, books: @books,books_full: @books_full }
     - else
