--- a/app/views/shared/_books_serch_box.slim
+++ b/app/views/shared/_books_serch_box.slim
@@ -1,5 +1,5 @@
 
-= form.radio_button :search_condition, :title,  class:"radio_button"
+= form.radio_button :search_condition, :title, :checked => true,  class:"radio_button"
 |
 = form.label :search_condition, "書籍タイトルから検索", {value: :title, style: "display: inline-block;", class:"radio_button_text"}
 = form.radio_button :search_condition, :author,  class:"radio_button"
