Fix Flash message devise

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -44,8 +44,13 @@ html
                   li
                     = link_to 'ログイン', new_user_session_path
       .container
-        - flash.each do |message_type, message|
-          = content_tag(:div, message, class: "alert alert-#{message_type}")
+        - if flash[:notice]
+          .alert.alert-success
+            p
+              = flash[:notice]
+        - else
+          - flash.each do |message_type, message|
+            = content_tag(:div, message, class: "alert alert-#{message_type}")
         = yield
       footer
         #header
